fix header spacing

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -290,12 +290,12 @@ table + p{
 
 #global-header.with-proposition .header-wrapper .header-global{
 	width: 65%;
+	padding-bottom: 5px;
 }
 
 #product-name {
     font-size: 24px;
     font-weight: 400;
-    padding-left: 5px;
 }
 
 .masthead{
